# adventofcode

./: .gitignore  Cargo.toml  README.md
inputs/: 2025_6.in
src/: aoc.rs  main.rs  util.rs
src/aoc2018/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day19.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc2020/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc2021/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc2022/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc2025/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  mod.rs
year_lib/: Cargo.toml
year_lib/src/: lib.rs  year.rs
year_lib/year_proc_lib/src/: lib.rs
year_proc_lib/: Cargo.toml
year_proc_lib/src/: lib.rs
