[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
edition = "2021"

[dependencies]
curl = "0.4"
chrono = "0.4"
regex = "1.12"
lazy_static = "1.5"
dotenv = "0.15"
fnv = "1.0"
structopt = "0.3"
once_cell= "1.21"
ahash = "0.8"
fxhash = "0.2"
bitvec = "1.0"
itertools = "0.14"
year_lib = { path = "year_lib" }

[profile.production]
inherits = "release"
codegen-units=1
lto = true